--- a/1.html
+++ b/1.html
@@ -26,7 +26,7 @@
     <Strong>creating <u>web</u> pages</Strong>
     and web applications.<br><br>
 
-    <img src="chris-ried-ieic5Tq8YMk-unsplash.jpg" width="100%">
+    <img src="coding.jpg" width="100%">
 </body>
 
 </html>
