--- a/2.html
+++ b/2.html
@@ -4,6 +4,17 @@
 <head>
     <title>WEB1 - HTML</title>
     <meta charset="utf-8">
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-203330715-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-203330715-1');
+    </script>
+
 </head>
 
 <body>
@@ -13,11 +24,6 @@
         <li><a href="2.html">CSS</a></li>
         <li><a href="3.html">JavaScript</a></li>
     </ol>
-    <ul>
-        <li>egoing</li>
-        <li>k8805</li>
-        <li>youbin</li>
-    </ul>
 
     <h2>CSS</h2>
     <p>종속형 시트 또는 캐스케이딩 스타일 시트(Cascading Style Sheets, CSS)는 마크업 언어가 실제 표시되는 방법을 기술하는 언어로[1], HTML과 XHTML에 주로 쓰이며, XML에서도
